@@ -176,6 +176,16 @@ of checkout.</td>    <td align="center" valign="top">no</td>
     <td align="center" valign="top">yes</td>
   </tr>
     
+  <tr>
+    <td valign="top">convertEOL</td>
+    <td valign="top">If true, (default) all ascii files will have their end-of-line 
+    characters adjusted to that of the local machine on checkout.  This is normally
+    what you'd want but if for some reason you don't want that to happen, set it to false
+    and the files will be checked out with whatever end-of-line characters are used on
+    the server. </td>    
+    <td align="center" valign="top">yes</td>
+  </tr>
+
 </table>
 
 <h3>Examples</h3>
